fix overflow-wrap

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -10,7 +10,6 @@ pre {
 
 code {
   font-size: 85%;
-  overflow-wrap: break-word;
 }
 
 pre {
